# Helper-Near-Me

./: .env  .gitignore  CLAUDE.md  app.py  auth.db  contact.xlsx  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_app.py
app/: config.py  database.py
app/auth/: __init__.py  security.py
app/models_schema/: __init__.py  models.py  schemas.py
app/repository/: __init__.py  base_repository.py  session_repository.py  user_repository.py
app/routes/: api.py  ui.py
app/templates/: 404.html  500.html  base.html  footer.html  header.html  home.html  login.html  register.html  toast.html  unauthorized.html
app/utility/: dependencies.py  middleware.py
data/: users.json
my-app/: package-lock.json  package.json
my-app/app/: globals.css  layout.tsx
my-app/app/admin/: page.tsx
my-app/app/admin/add-user/: page.tsx
my-app/app/admin/edit-user/[id]/: page.tsx
my-app/app/api/skills/: route.ts
my-app/app/api/users/: route.ts
my-app/app/api/users/[id]/: route.ts
my-app/app/api/users/bulk-upload/: route.ts
my-app/app/api/users/template/download/: route.ts
my-app/app/profile/[id]/: page.tsx
my-app/app/register/: page.tsx
my-app/components/: CTASection.tsx  FAQSection.tsx  Footer.tsx  Header.tsx  HomePage.tsx  Testimonials.tsx  UserCard.tsx
my-app/lib/: constants.ts  mongodb.ts
my-app/models/: User.ts
my-app/types/: index.ts
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  add_user.html  admin.html  base.html  home.html  profile.html  register.html
